2005-10-10  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: removed LINENO/LINENO_ATTR variables
	
	* dom/DOMSource.java: import java.math.BigInteger
						  added LINENO/LINENO_ATTR variables
						  added varibles for adding lines to DOM
						  added addLine method
						  
	* dom/DOMTestDOMFrysk.java: added test of DOMSource.addLine method
								cleaned up a lot of variables

2005-10-07  Adam Jocksch  <ajocksch@redhat.com>

	* InlineHandler.java: Removed member CurrentBottom, added firstVisible
	and lastVisible.
	(init): Changed to match above refactoring.
	(moveDown): Number of scopes visible now based on prefernce, changed
	to reflect this.
	(moveUp): Ditto.

	* InlineViewer.java (load): Added check to automatically hide ellipses.
	(moveDown): Added.
	(setSubscopeAtCurrentLine): Sets so the child does not show ellipses.

2005-10-07  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: changed addSource/AddInlineFunction to return void
						 added getInlineFunction method
						 
	* dom/DOMSource.java: added setFileName/setFilePath methods
	
	* dom/DOMTestDOMFrysk.java: added tests for above additons/changes
							more work on test messages to make them clearer

2005-10-07  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: add getSource method
	
	* dom/DOMTestDOMFrysk.java: add tests for getSource/getSources
	
2005-10-05  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: modifed getInlinedFunctions method
	
	* dom/DOMTestDOMFrysk.java: added test for above

2005-10-05  Adam Jocksch  <ajocksch@redhat.com>

	* InlineViewer.java (load): Added note of how many scopes hidden to 
	ellipsis.
	(setSubscopeAtCurrentLine): Now sets expanded to be true
	(drawMargin): Fixed off by one error when ellipsis were shown.

	* PCLocation.java (getDepth): Added.

2005-10-05  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: moved printDOM method to DOMTestDOMFrysk
						 removed uneeded imports and variable for above
						 